feat: implement swagger authentication and dummy data
