# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Tinder Clone API",
-        "description": "API for a Tinder-like application",
+        "description": "API for a Tinder clone application",
         "contact": {
             "email": "admin@example.com"
         },
@@ -15,41 +15,21 @@
     "paths": {
         "/api/register": {
             "post": {
-                "tags": [
-                    "Auth"
-                ],
                 "summary": "Register a new user",
-                "operationId": "8a56853624e025573120a09a4c75d468",
+                "operationId": "8e4e3cb7b46126f4696379d3c7eeb4ad",
                 "requestBody": {
-                    "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "name",
-                                    "email",
-                                    "password",
-                                    "password_confirmation"
-                                ],
                                 "properties": {
                                     "name": {
-                                        "type": "string",
-                                        "example": "John Doe"
+                                        "type": "string"
                                     },
                                     "email": {
-                                        "type": "string",
-                                        "format": "email",
-                                        "example": "john.doe@example.com"
+                                        "type": "string"
                                     },
                                     "password": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "password"
-                                    },
-                                    "password_confirmation": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "password"
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -60,39 +40,24 @@
                 "responses": {
                     "201": {
                         "description": "User registered successfully"
-                    },
-                    "422": {
-                        "description": "Validation error"
                     }
                 }
             }
         },
         "/api/login": {
             "post": {
-                "tags": [
-                    "Auth"
-                ],
                 "summary": "Login a user",
-                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
+                "operationId": "222b2625838e3c57e017987f73598fda",
                 "requestBody": {
-                    "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "email",
-                                    "password"
-                                ],
                                 "properties": {
                                     "email": {
-                                        "type": "string",
-                                        "format": "email",
-                                        "example": "john.doe@example.com"
+                                        "type": "string"
                                     },
                                     "password": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "password"
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -103,9 +68,6 @@
                 "responses": {
                     "200": {
                         "description": "User logged in successfully"
-                    },
-                    "401": {
-                        "description": "Invalid credentials"
                     }
                 }
             }
@@ -304,13 +266,25 @@
                 },
                 "type": "object"
             }
+        },
+        "securitySchemes": {
+            "apiAuth": {
+                "type": "http",
+                "description": "Login with email and password to get the authentication token",
+                "name": "Token based Based",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            },
+            "sanctum": {
+                "type": "apiKey",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
+            }
         }
     },
     "tags": [
-        {
-            "name": "Auth",
-            "description": "Auth"
-        },
         {
             "name": "Users",
             "description": "Users"
